# pam_smtpauth

./: AUTHORS  CONFIGURATION.eucjp  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  autogen.sh  config.h  config.h.in  configure  configure.in  pam_smtpauth.5  pam_smtpauth.spec.in
debian/: changelog  control  copyright  dirs  postrm  rules
sample/: ca.crt  pam.smtp  pam_smtpauth.conf
src/: Makefile.am  Makefile.in  base64.c  pam_smtpauth.c  pam_smtpauth.h  smtpauth.c  smtpauth.c.usleep  smtpauth.h  socket.c
tools/: Makefile.am  Makefile.in  authsend.c  decode-md5.pl  digest-md5.pl
